--- a/.github/workflows/medium-post.yml
+++ b/.github/workflows/medium-post.yml
@@ -1,4 +1,4 @@
-name: Medium Auto Post
+name: Medium Auto Post Test
 
 on:
   workflow_dispatch:
@@ -8,46 +8,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Checkout the repository
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v4
 
-      # 2️⃣ Setup Node.js
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
+      - name: Setup Node
+        uses: actions/setup-node@v4
         with:
           node-version: 20
 
-      # 3️⃣ Install dependencies
       - name: Install dependencies
         run: npm install
 
-      # 4️⃣ Install Playwright browsers
       - name: Install Playwright browsers
-        run: npx playwright install --with-deps
+        run: npx playwright install
 
-      # 5️⃣ Run login script
-      - name: Login to Medium
-        run: npm run login
+      - name: Run Medium Test Post
         env:
           MEDIUM_COOKIES: ${{ secrets.MEDIUM_COOKIES }}
-
-      # 6️⃣ Run test post script
-      - name: Test post on Medium
-        run: npm run test-post
-        env:
-          MEDIUM_COOKIES: ${{ secrets.MEDIUM_COOKIES }}
-
-      # 7️⃣ Optional: Run postArticle script
-      # Uncomment if you want to auto-fill an article
-      #- name: Post article on Medium
-      #  run: npm run post-article
-      #  env:
-      #    MEDIUM_COOKIES: ${{ secrets.MEDIUM_COOKIES }}
-
-      # 8️⃣ Upload screenshots as artifacts (for debugging)
-      - name: Upload screenshots
-        uses: actions/upload-artifact@v4
-        with:
-          name: medium-screenshots
-          path: screenshots/
+          MEDIUM_STORAGE: ${{ secrets.MEDIUM_STORAGE }}
+        run: node testPost.js
