--- a/package.json
+++ b/package.json
@@ -3,14 +3,10 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "login": "node scripts/loadProfile.js",
-    "test-post": "node scripts/testPost.js",
-    "test-post-stealth": "node scripts/testPostStealth.js",
-    "post-article": "node scripts/postArticle.js"
+    "login": "node loadProfile.js",
+    "test-post": "node testPost.js"
   },
   "dependencies": {
-    "playwright": "^1.56.1",
-    "playwright-extra": "^4.3.6",
-    "puppeteer-extra-plugin-stealth": "^2.11.2"
+    "playwright": "^1.56.1"
   }
 }
